<resources>
    <string name="app_name">Mausam</string>
    <string name="location">Location</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_24_c">24^C</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_30am">5:30am</string>
    <string name="sunset">Sunset</string>
    <string name="_5_30am1">5:30am</string>
    <string name="wind">Wind</string>
    <string name="_5_30am2">5:30am</string>
    <string name="pressure">Pressure</string>
    <string name="_5_30am3">5:30am</string>
    <string name="humidity">Humidity</string>
    <string name="_5_30am5">5:30am</string>
    <string name="created_by">Created by</string>
    <string name="aman">Aman</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>